<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="berkantkz.checkrt.MainActivity"
    android:background="@color/background">

    <Button
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/round_button"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/check"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:layout_weight="4"
        android:id="@+id/checkbutton"
        android:onClick="checkbutton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
    android:id="@+id/howto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:clickable="true"
    android:autoLink="web"
    android:onClick="howto"
    android:gravity="bottom"
    android:padding="20px"
    android:text="@string/howto"
    android:textColor="#fff"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:layout_marginRight="24dp"
    android:layout_marginEnd="24dp"
    android:layout_alignParentBottom="true"
    android:layout_toLeftOf="@+id/textView2"
    android:layout_toStartOf="@+id/textView2" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:autoLink="web"
        android:onClick="about"
        android:gravity="bottom"
        android:padding="20px"
        android:text="@string/about"
        android:textColor="#fff"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_alignTop="@+id/howto"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="|"
        android:textSize="25dp"
        android:layout_alignBaseline="@+id/howto"
        android:layout_alignBottom="@+id/howto"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2" />

    <Button
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:text="@string/exit"
        android:textSize="18dp"
        android:layout_marginBottom="41dp"
        android:background="@drawable/basic_button"
        android:clickable="true"
        android:onClick="exit"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true" />



</RelativeLayout>