<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".about">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_big"
        android:gravity="center_vertical|center_horizontal"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="179dp"
        android:onClick="logo_big"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_caps"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textColor="#fff"
        android:id="@+id/version"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

    <TextView
        android:layout_width="23dp"
        android:layout_height="20dp"
        android:id="@+id/appver"
        android:layout_below="@+id/textView4"
        android:layout_toRightOf="@+id/version"
        android:layout_toEndOf="@+id/version"
        android:layout_marginLeft="9dp"
        android:layout_marginStart="9dp"
        android:textColor="#fff"/>

    <Button
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:text="@string/back"
        android:textSize="18dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/basic_button"
        android:clickable="true"
        android:onClick="back"
        android:id="@+id/button"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="berkantkz"
        android:id="@+id/berkantkz"
        android:padding="20px"
        android:textColor="#fff"
        android:textStyle="normal"
        android:layout_marginBottom="21dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/appver"
        android:layout_toEndOf="@+id/appver" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="|"
        android:textSize="25dp"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/thanks"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/thanks"
        android:text="@string/thanksto"
        android:padding="20px"
        android:clickable="true"
        android:onClick="thanks"
        android:textColor="#fff"
        android:layout_alignTop="@+id/berkantkz"
        android:layout_toLeftOf="@+id/button"
        android:layout_toStartOf="@+id/button" />


</RelativeLayout>